# ppd_hate_speech_detection

./: .gitignore  README.md  pyproject.toml
data/: df_test.csv  df_val.csv
notebooks/: baseline.ipynb  eda.ipynb  split.ipynb
reports/: metrics.json  metrics_baseline.json
