[project]
name = "ppd-hate-speech-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pip>=25.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
]
